<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RentLockerFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivRentIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image_rent_locker"
        android:layout_marginStart="-45dp"
        android:layout_marginEnd="-45dp"
        android:layout_marginTop="50dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeader"
        app:layout_constraintTop_toBottomOf="@id/ivRentIcon"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_fragment_rent_locker"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="45dp"
        style="@style/textview"
    />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubtitle1"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:layout_constraintStart_toStartOf="@id/tvHeader"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/helper_fragment_rent_locker"
        android:textSize="14sp"
        style="@style/textview"
    />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnGoToRent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alugar_armario"
        android:textAllCaps="false"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        style="@style/floatingactionbutton"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
